INCLUDE_DIRECTORIES (
	${HEADER_DIR}
	${THIRD_HEADER_DIR}
	${THIRD_HEADER_DIR}/sqlite3
	include/
)

LINK_DIRECTORIES (
	${LINK_LIBRARIES_DIR}
)

SET(TARGET_NAME sessionmgr_test${FILE_PREFIX})

FILE (GLOB HEADER_LIST "include/*.h")

AUX_SOURCE_DIRECTORY(source/ SOURCE_LIST)

SET(LIBRARIES_NAME 
		sessionmgr
		randtool
	)
INCLUDE (${PROJECT_SOURCE_DIR}/script/linklib.cmake)

ADD_EXECUTABLE (${TARGET_NAME} ${SOURCE_LIST} ${HEADER_LIST})

SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES DEBUG_POSTFIX "_d")

IF (${os} STREQUAL "windows")
		TARGET_LINK_LIBRARIES(${TARGET_NAME}
						${DEBUG_LINK_LIBRARIES}
						${RELEASE_LINK_LIBRARIES}	
						sqlite3
		)
ELSEIF (${os} STREQUAL "linux")	
		TARGET_LINK_LIBRARIES(${TARGET_NAME}
						${DEBUG_LINK_LIBRARIES}
						${RELEASE_LINK_LIBRARIES}	
						sqlite3
						uuid
						dl
		)

		SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -static")
		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static")
	
ENDIF()
